# coding-agent

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
coding_agent/: __init__.py  cli.py  config.py  events.py  execution.py  project_docs.py  providers.py  session.py  tools.py  truncation.py  turns.py  utils.py
coding_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_loop_detection.py  test_scoped_env.py  test_tools.py  test_truncation.py
