[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coding-agent"
version = "0.1.0"
description = "Provider-aligned coding agent loop built on unified-llm"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Coding Agent Contributors" }]
dependencies = [
  "httpx>=0.25",
  "jsonschema>=4.19",
  "unified-llm",
]

[project.scripts]
coding-agent = "coding_agent.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["coding_agent*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ty]

[tool.uv.sources]
unified-llm = { path = "../llm-client", editable = true }

[dependency-groups]
dev = [
  "pytest>=8.2",
  "ruff>=0.15.0",
  "ty>=0.0.15",
]
